Do not rely on sun internal classes.